--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Admin</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="./css/index.css">
   
@@ -21,7 +21,7 @@
         <div class="col-md-7">
           <div class="header">
             <h1>Welcome Back!</h1>
-            <p>Hallo Gym Member! Please enter your username and password below.</p>
+            <p>Hallo! Please enter your username and password below.</p>
           </div>
 
           <div class="login-form">
